--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,26 @@
 				"isDefault": true
 			},
 			"detail": "디버거에서 생성된 작업입니다."
+		},
+		{
+			"type": "shell",
+			"label": "g++ build active file",
+			"command": "/usr/bin/g++",
+			"args": [
+				"-fdiagnostics-color=always",
+				"-std=c++17",
+				"-g0",
+				"${file}",
+				"-o",
+				"${fileDirname}/build/${fileBasenameNoExtension}"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": "build"
 		}
 	],
 	"version": "2.0.0"
