설정 저장. 되돌릴 수도 있음.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
 			"request": "launch",
 			"preLaunchTask": "g++ build active file",
 			"name": "Debug",
-			"program": "${fileDirname}/build/${fileBasenameNoExtension}",
+			"program": "${fileDirname}\\build\\${fileBasenameNoExtension}",
 			"args": [],
-			"cwd": "${fileDirname}/build"
+			"cwd": "${fileDirname}\\build"
 		}
 	]
 }
